--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/svensktutby/gulp-starter-config.git"
+    "url": "git+https://github.com/svensktutby/repair-design-project.git"
   },
   "keywords": [
     "gulp",
@@ -94,6 +94,7 @@
     "webpack-stream": "6.1.2"
   },
   "dependencies": {
+    "gulp-replace": "^1.1.3",
     "jquery": "^3.4.1",
     "svg4everybody": "^2.1.9"
   }
